fix wrong padding in firefox

--- a/blocks/common/input/input.css
+++ b/blocks/common/input/input.css
@@ -2,6 +2,7 @@
 {
     font-family: Verdana;
 
+    -moz-box-sizing: border-box;
     box-sizing: border-box;
     width: 100%;
     margin: 0;
